--- a/MyPartyCore/appsettings.json
+++ b/MyPartyCore/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyPartyDatabase": "Server=localhost\\SQLEXPRESS;Database=MyParties;Trusted_Connection=True;"
+  }
 }
