--- a/MyPartyCore/appsettings.json
+++ b/MyPartyCore/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyPartyDatabase": "Server=localhost\\SQLEXPRESS;Database=MyParties;Trusted_Connection=True;"
+    "MyPartyDatabase": "Server=localhost\\SQLEXPRESS;Database=MyParties;Trusted_Connection=True;",
+    "MyPartyDatabaseEF": "Server=localhost\\SQLEXPRESS;Database=MyPartiesEF;Trusted_Connection=True;"
   }
 }
